--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@ body {
   margin-bottom: 2em;
 }
 .input__label {
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: $third;
   margin-bottom: 0.5em;
 }
@@ -36,7 +36,7 @@ body {
   color: $third;
   background-color: $forth;
   border: 1px solid $secondary;
-  height: 50px;
+  height: 45px;
   padding: 0em 1em;
   outline: none;
   border-radius: 8px;
@@ -46,4 +46,21 @@ body {
 }
 .input__field:focus {
   border-width: 2px;
+}
+.auth {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+.auth__form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5em 8em;
+}
+.auth__img {
+  width: 50%;
+  height: 100%;
 }
