--- a/src/Pages/Home.scss
+++ b/src/Pages/Home.scss
@@ -5,8 +5,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  min-height: 100vh;
   padding: 6em 5em;
+  max-width: 1440px;
+  margin: 0em auto;
 }
 .home__heading {
   font-size: 2rem;
@@ -37,27 +39,28 @@
   justify-content: center;
   border-radius: 8px;
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-  color: $primary;
+  color: $primary !important;
   margin-bottom: 1em;
   text-align: center;
   text-decoration: none;
 }
 .primary {
-  background-color: $secondary;
+  background-color: $secondary !important;
 }
 .primary:hover {
-  background-color: darken($secondary, 10%);
+  background-color: darken($secondary, 10%) !important;
 }
 .secondary {
-  background-color: $third;
+  background-color: $third !important;
 }
 .secondary:hover {
-  background-color: darken($third, 10%);
+  background-color: darken($third, 10%) !important;
 }
 .home__features {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 .home__features__card {
   padding: 2em;
@@ -66,6 +69,9 @@
   background-color: $third;
   margin: 1em;
   border-radius: 8px;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
+  height: 250px;
+  max-width: 22%;
 }
 .home__features__card__heading {
   margin-bottom: 1em;
@@ -77,7 +83,20 @@
   font-size: 0.8rem;
   text-align: justify;
 }
+@media (max-width: 1200px) {
+  .home__features__card {
+    max-width: 30%;
+  }
+}
+@media (max-width: 1000px) {
+  .home__features__card {
+    max-width: 45%;
+  }
+}
 @media (max-width: 700px) {
+  .home {
+    padding: 6em 2em;
+  }
   .home__cta {
     flex-direction: column;
   }
@@ -86,5 +105,8 @@
   }
   .home__features {
     flex-direction: column;
+  }
+  .home__features__card {
+    max-width: 100%;
   }
 }
