--- a/src/Pages/Chat.scss
+++ b/src/Pages/Chat.scss
@@ -131,6 +131,9 @@
   right: 0px;
   border: 3px solid #abf5b0;
 }
+.message__content {
+  width: 50%;
+}
 .other__message__data {
   width: fit-content;
   padding: 0.7em 1.2em;
@@ -226,4 +229,13 @@
 .chat__screen__messages__input__field button svg {
   width: 20px;
   height: 20px;
+}
+.emoji__picker__btn {
+  position: relative;
+}
+.emoji__picker {
+  position: absolute;
+  bottom: 50px;
+  right: 0px;
+  display: none;
 }
