--- a/src/Pages/Chat.scss
+++ b/src/Pages/Chat.scss
@@ -38,20 +38,49 @@
 }
 .chat__panel__groups__header {
   display: flex;
+  border-bottom: 1px solid #bec4ca;
 }
 .chat__panel__groups__entry {
   padding: 0.6em 1em;
   color: $third;
   font-size: 1rem;
+  border: none;
   border-bottom: 3px solid $primary;
+  background-color: transparent;
   user-select: none;
   cursor: pointer;
 }
 .chat__panel__groups__entry:hover {
+  transition: 100ms ease-in-out;
+  border-color: $secondary;
+}
+.chat__panel__groups__entry:active {
   border-color: $secondary;
 }
 .chat__panel__groups__entry:focus-within {
   border-color: $secondary;
+}
+.chat__panel__group {
+  margin-top: 1em;
+  max-height: 78vh;
+  overflow-y: auto;
+  overflow-x: none;
+  padding-right: 1em;
+}
+.chat__panel__group::-webkit-scrollbar {
+  width: 12px;
+  border-radius: 12px;
+}
+.chat__panel__group::-webkit-scrollbar-thumb {
+  background-color: $secondary;
+  border-radius: 12px;
+}
+.chat__panel__group::-webkit-scrollbar-thumb:hover {
+  background-color: darken($secondary, 10%);
+}
+.chat__panel__group::-webkit-scrollbar {
+  background-color: $forth;
+  border-radius: 12px;
 }
 .chat__screen {
   flex: 1;
@@ -82,6 +111,96 @@
 .chat__screen__messages::-webkit-scrollbar {
   background-color: $forth;
   border-radius: 12px;
+}
+.chat__panel__group__entry {
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1em;
+  border-radius: 8px;
+  margin-bottom: 1em;
+  cursor: pointer;
+}
+.chat__panel__group__entry:hover {
+  background-color: #f0f0fb;
+}
+.chat__panel__group__entry__left {
+  display: flex;
+}
+.chat__panel__group__entry__logo {
+  margin-right: 1em;
+  position: relative;
+  width: 60px;
+  height: 60px;
+}
+.chat__panel__group__entry__badge {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: $secondary;
+  color: $primary;
+  width: 22px;
+  height: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 22px;
+  font-size: 14px;
+}
+.chat__panel__group__entry__icon {
+  width: 100%;
+  height: 100%;
+}
+.chat__panel__group__entry__status {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+}
+.chat__panel__group__entry__content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.chat__panel__group__entry__content__name {
+  font-size: 18px;
+  color: $third;
+}
+.chat__panel__group__entry__content__last__msg {
+  font-size: 14px;
+  color: $third;
+}
+.chat__panel__group__entry__info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.chat__panel__group__entry__info__edit {
+  background-color: transparent;
+  width: fit-content;
+  border: none;
+  color: #bec4ca;
+  position: relative;
+}
+.chat__panel__group__entry__info__edit:hover {
+  color: $secondary;
+}
+.chat__panel__group__entry__info__edit__panel {
+  position: absolute;
+  top: 30px;
+  right: 0px;
+  background-color: $primary;
+  padding: 1em;
+  width: 100px;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+  display: none;
+}
+.chat__panel__group__entry__info__time__stamp {
+  margin-top: 0.3em;
+  font-size: 14px;
+  color: $third;
 }
 .user__message {
   width: 100%;
@@ -171,13 +290,21 @@
   font-size: 1rem;
   color: $third;
 }
-.user__status {
+.user__status__online {
   width: 20px;
   height: 20px;
   border-radius: 15px;
   background-color: $online;
   margin-left: 1em;
   border: 4px solid #abf5b0;
+}
+.user__status__offline {
+  width: 20px;
+  height: 20px;
+  border-radius: 15px;
+  background-color: $offline;
+  margin-left: 1em;
+  border: 4px solid #f5abab;
 }
 .chat__screen__messages__input {
   width: 100%;
